syntax = "proto3";

option go_package = "shark/pkg/proto/groupinfo";
// protoc --go_out=. --go_opt=paths=source_relative  --go-grpc_out=. --go-grpc_opt=paths=source_relative groupinfo.proto
package groupInfo;

message dbGroupInfo{
  uint64   group_code = 1;
  string   group_name = 2;
  bytes    group_announcement = 3;
  uint32   message_notify = 4;
  uint32   join_method = 5;
  uint32   speak_limit = 6;
  repeated uint32 images = 7;
}
